# saturndb

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  saturn.toml.example
.github/workflows/: ci.yml
docs/: index.html
examples/: chat.html
sdk/dart/: saturn.dart  test.dart
sdk/js/: saturn.js  test.js
sdk/python/: saturn.py  test.py
src/: cli.rs  lib.rs  main.rs  monitor.rs
src/cluster/: gossip.rs  mod.rs  peer.rs  ring.rs  router.rs
src/core/: auth.rs  broker.rs  config.rs  event.rs  mod.rs  rules.rs  tls.rs
src/net/: codec.rs  mod.rs  protocol.rs
src/server/: audit.rs  handler.rs  listener.rs  metrics.rs  mod.rs  ws_proxy.rs
src/storage/: index.rs  log.rs  mod.rs  snapshot.rs
tests/: integration.rs
