[package]
name = "saturn"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "saturn-server"
path = "src/main.rs"

[[bin]]
name = "saturn"
path = "src/cli.rs"

[[bin]]
name = "saturn-monitor"
path = "src/monitor.rs"


[dependencies]
mimalloc = { version = "0.1", default-features = false }
tokio       = { version = "1", features = ["full"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
bytes       = "1"
dashmap     = "6"
uuid        = { version = "1", features = ["v4"] }
chrono      = { version = "0.4", features = ["serde", "unstable-locales"] }
anyhow      = "1"
tracing     = "0.1"
tracing-subscriber = "0.3"
toml        = "0.8"
tokio-tungstenite = "0.24"
futures-util      = "0.3"
ratatui           = "0.29"
crossterm         = "0.28"
rcgen             = "0.13"
jsonwebtoken      = "9"
rustls            = "0.23"
rustls-pemfile    = "2"
tokio-rustls      = "0.26"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
